--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+
+<head>
+	<title>Ariele Martinez: Professional Cat Lady and Lady Coder</title>
+</head>
+
+<body>
+
+<h1>Ariele Martinez: Brooklyn Native, Galactic Citizen</h1>
+
+<p>Hello! My name is Ariele and I am an aspiring web designer from Brooklyn, NY. I am simply testing out my personal website. Please do not take any of this seriously (even though it's all true!)! I am going to change the content in less than 5 hours to reflect something slightly more professional. Again, I am just testing this page out.</p>
+</body>
+</html>
