--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-	<title>Ariele Martinez: Professional Cat Lady and Lady Coder</title>
+	<title>Ariele Martinez: Brooklyn, NY Web Design Student</title>
 </head>
 
 <body>
