--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<title>Ariele Martinez || NYC-Based Web Designer</title>
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 	<link href="stylesheet.css" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
