Portfolio Update Nov 2815

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			<div class="nav">
 				<ul>
 					<li><a href="#about" class="round smoothScroll">About</a></li>
-					<li><a href="#resume" class="round smoothScroll">Resume</a></li>
 					<li><a href="#portfolio" class="round smoothScroll">Portfolio</a></li>
+					<li><a href="#resume" class="round smoothScroll">Resume</a></li>
 					<li><a href="#contact" class="round smoothScroll">Contact</a></li>
 				</ul>
 				<ul>
@@ -36,6 +36,12 @@
 				<img src="images/ariele.jpg" class="img-circle" alt="Profile photo" />
 				<p>I am a Brooklynite studying Web Design at Startup Institute New York who loves stargazing, drinking tea, and playing with cats. My background includes a BA in Psychology from Bryn Mawr College and experience in non-profit development. Interested in working with me? <a href="#contact" class="smoothScroll">Contact</a> me for more information!
 				</p>
+			</div>
+			<div class="contentbox" id="portfolio">
+				<a name="portfolio"></a>
+				<img src="images/portfolio.png" class="title" /><br>
+				<a href="http://www.arielemartinez.com/cheese/" target="_blank"><img src="images/sammies.png" /></a>
+				<p>Cheese Sammies: Development and UX/UI Design</p>
 			</div> <!--End about-->
 			<div class="contentbox" id="resume">
 				<a name="resume"></a>
@@ -61,11 +67,6 @@
 <p><em>Assistant Teacher</em></p>
 <p>&bull; Facilitated Nursery and Pre-Kindergarten classes in tandem with head teacher; taught basic numbers, shapes, colors, and arithmetic; encouraged motor development through song and dance.</p>
 </div>
-			<div class="contentbox" id="portfolio">
-				<a name="portfolio"></a>
-				<img src="images/portfolio.png" class="title" /><br>
-				<p>Coming shortly!</p>
-			</div>
 			<div class="contentbox" id="footer">
 				<a name="contact"></a>
 				<img src="images/contact.png" class="title" /><br>
