--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
 <body>
 	<div id="container">
 		<div id="left">
-			<div class="nav">
-				<ul>
-					<li><a href="#about" class="round smoothScroll">About</a></li>
-					<li><a href="#portfolio" class="round smoothScroll">Portfolio</a></li>
-					<li><a href="#resume" class="round smoothScroll">Resume</a></li>
-					<li><a href="#contact" class="round smoothScroll">Contact</a></li>
-				</ul>
-				<ul>
-					<li><a href="http://www.twitter.com/arielebydesign"><img src="images/twitter.png" /></a></li>
-					<li><a href="http://www.linkedin.com/in/arielemartinez"><img src="images/linkedin.png" /></a></li>
-					<li><a href="http://www.github.com/acmartine"><img src="images/github.png" /></a></li>
-				</ul>
-			</div>
+			<nav>
+				<li><a href="#about" class="round smoothScroll">About</a></li>
+				<li><a href="#portfolio" class="round smoothScroll">Portfolio</a></li>
+				<li><a href="#resume" class="round smoothScroll">Resume</a></li>
+				<li><a href="#contact" class="round smoothScroll">Contact</a></li>
+			</nav>
+			<footer>
+				<li><a href="http://www.twitter.com/arielebydesign"><img src="images/twitter.png"></a></li>
+				<li><a href="http://www.linkedin.com/in/arielemartinez"><img src="images/linkedin.png"></a></li>
+				<li><a href="http://www.github.com/acmartine"><img src="images/github.png"></a></li>
+			</footer>
 		</div><!--End left div-->
 
 		<div id="right">
@@ -34,55 +32,52 @@
 				<a name="about"></a>
 				<img src="images/about-blk.png" class="title" /><br>
 				<img src="images/ariele.jpg" class="img-circle" alt="Profile photo" />
-				<p>I am a Brooklynite studying Web Design at Startup Institute New York who loves stargazing, drinking tea, and playing with cats. My background includes a BA in Psychology from Bryn Mawr College and experience in non-profit development. Interested in working with me? <a href="#contact" class="smoothScroll">Contact</a> me for more information!
-				</p>
+				<p>Greetings from Brooklyn! I am a Web Design student at Startup Institute New York.</p><br>
+				<p>My background includes a BA in Psychology from Bryn Mawr College and experience in non-profit development and education. When I'm not finagling with ems and converting hex to RGB (and back again), I can be found stargazing, drinking tea, or hanging out in cat cafes.</p><br>
+				<p>Interested in working with me? <a href="#contact" class="smoothScroll">Contact</a> me for more information!</p>
 			</div>
 			<div class="contentbox" id="portfolio">
 				<a name="portfolio"></a>
 				<img src="images/portfolio.png" class="title" /><br>
 				<a href="http://www.arielemartinez.com/cheese/" target="_blank"><img src="images/sammies.png" /></a>
 				<p>Cheese Sammies: Development and UX/UI Design</p>
+				<a href="http://www.campusperks.co" target="_blank"><img src="images/cp.png" /></a>
+				<p>Campus Perks: Development and UX/UI Design</p>
 			</div> <!--End about-->
 			<div class="contentbox" id="resume">
 				<a name="resume"></a>
 				<img src="images/resume.png" class="title" /><br>
 				<h3>Education</h3>
-<p>Bryn Mawr College, Bryn Mawr, PA</p>
-<p>Major in Psychology, Minor in Biology</p>
-<p><em>A.B., May 2013</em></p>
+				<p>Bryn Mawr College, Bryn Mawr, PA</p>
+				<p>Major in Psychology, Minor in Biology</p>
+				<p><em>A.B., May 2013</em></p>
 				<h3>Experience</h3>
 				<p>Startup Institute, New York, NY</p>		<p>October 2015 - December 2015</p>
-<p><em>Web Design Student</em></p>
-<br>
-<p>&bull;Selected from a competitive applicant pool for an eight-week immersive program. Startup Institute helps individuals to develop the skills, mindset, and network to be high-impact at a high-growth company. The Web Design Track specifically focuses on HTML + CSS, jQuery, JavaScript, user-centered design, rapid ideation, navigation and flow, and typography.</p>
-<br>
-			<p>Chuck Cooper Foundation, Pittsburgh, PA</p> <p>September 2013 - July 2015</p>
-			<p><em>Program Director (2014-15), Development Officer (2013-14)</em></p><br>
-			<p>&bull;Implemented and evaluated the inaugural Chuck Cooper Leadership Development Program, providing graduate and undergraduate students with individualized mentoring, leadership training, and community service experience</p>
-<p>&bull; Oversaw event logistics of 2014 and 2015 Awards Luncheon, the organization's largest fundraisers, attracting over 200 high-profile attendees and honorees each year</p>
-<p>&bull; Acquired over $80,000 in grant funding from major Pittsburgh-area foundations to support programming and operations.</p>
-<br>
-<p>Practical Learning Center, Brooklyn, NY</p>
-<p>June 2013 - August 2013</p>
-<p><em>Assistant Teacher</em></p>
-<p>&bull; Facilitated Nursery and Pre-Kindergarten classes in tandem with head teacher; taught basic numbers, shapes, colors, and arithmetic; encouraged motor development through song and dance.</p>
-</div>
-			<div class="contentbox" id="footer">
+				<p><em>Web Design Student</em></p>
+				<br>
+				<p>&bull;Selected from a competitive applicant pool for an eight-week immersive program. Startup Institute helps individuals to develop the skills, mindset, and network to be high-impact at a high-growth company. The Web Design Track specifically focuses on HTML + CSS, jQuery, JavaScript, user-centered design, rapid ideation, navigation and flow, and typography.</p>
+				<br>
+				<p>Chuck Cooper Foundation, Pittsburgh, PA</p> <p>September 2013 - July 2015</p>
+				<p><em>Program Director (2014-15), Development Officer (2013-14)</em></p><br>
+				<p>&bull;Implemented and evaluated the inaugural Chuck Cooper Leadership Development Program, providing graduate and undergraduate students with individualized mentoring, leadership training, and community service experience</p>
+				<p>&bull; Oversaw event logistics of 2014 and 2015 Awards Luncheon, the organization's largest fundraisers, attracting over 200 high-profile attendees and honorees each year</p>
+				<p>&bull; Acquired over $80,000 in grant funding from major Pittsburgh-area foundations to support programming and operations.</p>
+				<br>
+				<p>Practical Learning Center, Brooklyn, NY</p>
+				<p>June 2013 - August 2013</p>
+				<p><em>Assistant Teacher</em></p>
+				<p>&bull; Facilitated Nursery and Pre-Kindergarten classes in tandem with head teacher; taught basic numbers, shapes, colors, and arithmetic; encouraged motor development through song and dance.</p>
+			</div>
+			<!--Contact Form-->
+			<div class="contentbox">
 				<a name="contact"></a>
 				<img src="images/contact.png" class="title" /><br>
-				<p>If you wish to get in touch with me, please complete the form below and I will respond to you as quickly as possible.
-				</p>
-				<form action="//formspree.io/acmartine@gmail.com" method="post">
-					Name: <input type="text" name="name" size="60"><br>
-					Email: <input type="text" name="email" size="60"><br>
-					Message: <br><textarea name="message" rows=6 cols=40></textarea><br>
-					<input type="submit"><input type="reset">
-				</form>
-			</div> <!--End footer-->
+				<p>Feel free to contact me via e-mail at acmartine[at]gmail.com. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign">@arielebydesign</a> or, if you're in a more formal mood, on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
+			</div>
 		</div><!--End right div-->
 
-			</div><!--End container div-->
+	</div><!--End container div-->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="smoothscroll.js"></script>
-		</body>
-		</html>
+</body>
+</html>
