--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="contentbox" id="about">
 				<img src="images/about-blk.png" class="title" /><br>
 				<img src="images/ariele.jpg" class="img-circle" alt="Profile photo" />
-				<p>Hello from Brooklyn! I am currently a Web Design student at Startup Institute New York and an aspiring UX/UI Designer with a love for front-end development.</p><br>
+				<p>Hello from Brooklyn! I am a recent graduate of Startup Institute New York's Web Design Track and an aspiring UX/UI Designer with a love for front-end development.</p><br>
 				<p>My background includes a BA in Psychology from Bryn Mawr College and experience in non-profit development and education. When I'm not finagling with ems and converting hex to RGB (and back again), I can be found stargazing, drinking tea, or hanging out in cat cafes.</p><br>
 				<p>Interested in working with me? <a href="#contact" class="smoothScroll">Contact</a> me for more information!</p>
 			</div>
