--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<img src="images/portfolio.png" class="title" />
 				<div class="hover11">
 					<figure>
-						<a href="http://www.campusperks.co" target="_blank"><img src="images/cp.png" class="center" /></a>
+						<a href="http://www.arielemartinez.com/cp" target="_blank"><img src="images/cp.png" class="center" /></a>
 					</figure>
 					<p>Campus Perks: UX/UI Design and Front-End Development</p>
 				</div>
