--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 		<!--Begin right div-->
 		<div id="right">
 			<div class="contentbox" id="header">
-				<img src="images/am-logo.png" class="title" />
+				<img src="images/am-logo.png" class="title" title="Ariele Martinez" />
 				<p>UX/UI Design &plus; Front-End Development</p>
 			</div>
 			<div class="contentbox" id="about">
-				<img src="images/about-blk.png" class="title" /><br>
-				<img src="images/ariele.jpg" class="img-circle" alt="Profile photo" />
+				<img src="images/about-blk.png" class="title" title="About Ariele" /><br>
+				<img src="images/ariele.jpg" class="img-circle" alt="Profile photo"/>
 				<p>Hello from Brooklyn! I am a recent graduate of Startup Institute New York's Web Design Track and an aspiring UX/UI Designer with a love for front-end development.</p><br>
 				<p>My background includes a BA in Psychology from Bryn Mawr College and experience in non-profit development and education. When I'm not finagling with ems and converting hex to RGB (and back again), I can be found stargazing, drinking tea, or hanging out in cat cafes.</p><br>
 				<p>Interested in working with me? <a href="#contact" class="smoothScroll">Contact</a> me for more information!</p>
 			</div>
 			<!--Portfolio-->
 			<div class="contentbox" id="portfolio">
-				<img src="images/portfolio.png" class="title" />
+				<img src="images/portfolio.png" class="title" title="Portfolio" />
 				<div class="hover11">
 					<figure>
 						<a href="http://www.arielemartinez.com/cp" target="_blank"><img src="images/cp.png" class="center" /></a>
@@ -55,7 +55,7 @@
 			
 			<!--Resume-->
 			<div class="contentbox" id="resume">
-				<img src="images/resume.png" class="title" /><br>
+				<img src="images/resume.png" class="title" title="Resume" /><br>
 				<img src="images/resume-imgcrop.png" class="center" />
 <!-- 				<h3>Education</h3>
 				<p>Bryn Mawr College, Bryn Mawr, PA</p>
@@ -80,7 +80,7 @@
 			</div>
 
 			<div class="contentbox" id="contact">
-				<img src="images/contact.png" class="title" /><br>
+				<img src="images/contact.png" class="title" title="Contact" /><br>
 				<p>Feel free to contact me via e-mail at acmartine[at]gmail.com. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign">@arielebydesign</a> or, if you're in a more formal mood, on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
 			</div>
 		</div><!--End right div-->
