mid march.21.16 updates

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <head>
-	<title>Ariele Martinez &bull; &bull; UX/UI Design and Front-End Development</title>
+	<title>Ariele Martinez - UX/UI &amp; Front-End Developer</title>
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 	<link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link href="css/lightbox.css" rel="stylesheet">
+	<link rel="shortcut icon" href="bar.ico" type="image/x-icon">
+	<link rel="icon" href="bar.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -27,13 +28,13 @@
 		<div id="right">
 			<div class="contentbox" id="header">
 				<span class="logo">Ariele Martinez</span>
-				<p>UX/UI Design &plus; Front-End Development</p>
+				<p>UX/UI Design &amp; Front-End Development</p>
 			</div>
 			<div class="contentbox" id="about">
 				<span class="head">About</span>
 				<img src="images/ariele.jpg" class="img-circle" alt="Profile photo"/>
-				<p>I am a graduate of Startup Institute New York's Web Design Track and a UX/UI Designer with a love for front-end development.</p><br>
-				<p>My background includes a BA in Psychology from Bryn Mawr College and experience in non-profit development and education. When I'm not finagling with ems and converting hex to RGB (and back again), I can be found stargazing, drinking tea, or hanging out in cat cafes.</p><br>
+				<p>I am a graduate of Startup Institute NY's Web Design Track and a UX/UI Designer with a love for front-end development.</p><br>
+				<p>My background includes a BA in Psychology from Bryn Mawr College and experience in non-profit development and education. When I'm not tinkering with code, I can be found stargazing, drinking tea, or hanging out in cat cafes.</p><br>
 				<p>Interested in working with me? <a href="#contact" class="smoothScroll">Contact</a> me for more information!</p>
 			</div>
 			<!--Portfolio-->
@@ -43,30 +44,39 @@
 					<figure>
 						<a href="http://www.arielemartinez.com/cp" target="_blank"><img src="images/cp.png" class="center" /></a>
 					</figure>
-					<p>Campus Perks: UX/UI Design and Front-End Development</p>
+					<p>Campus Perks: UX/UI Design, Front-End Development, Creative Direction</p>
 				</div>
 				<div class="hover11">
 					<figure>
 						<a href="http://www.arielemartinez.com/cheese/" target="_blank"><img src="images/sammies.png" class="center" /></a>
 					</figure>
-					<p>Cheese Sammies: UX/UI Design and Front-End Development</p>
+					<p>Cheese Sammies: UX/UI Design, Front-End Development, Creative Direction</p>
 				</div>
-			</div>
-			
-			<!--Resume-->
-			<div class="contentbox" id="resume">
-				<span class="head">Resume</span>
-				<img src="images/resume-imgcrop.png" class="center" />
-			</div>
+				<div class="hover11">
+					<figure>
+						<a href="images/bm-01.png" data-lightbox="beermenus" data-title="Customizable Tap Takeover Design"><img src="images/bm-01-th.png" /></a>
+						<a href="images/bm-02.png" data-lightbox="beermenus" data-title="Table Tent Design"><img src="images/bm-02-th.png" /></a>
+						<a href="images/bm-03.png" data-lightbox="beermenus" data-title="Table Tent Design"><img src="images/bm-03-th.png" /></a>
+						<a href="images/bm-04.png" data-lightbox="beermenus" data-title="Table Tent Design"><img src="images/bm-04-th.png" /></a>
+					</figure>
+					<p>BeerMenus: POS Material Design</p>
+				</div>
 
-			<div class="contentbox" id="contact">
-				<span class="head">Contact</span>
-				<p>Feel free to contact me via e-mail at acmartine[at]gmail.com. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign">@arielebydesign</a> or, if you're in a more formal mood, on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
-			</div>
-		</div><!--End right div-->
+				<!--Resume-->
+				<div class="contentbox" id="resume">
+					<span class="head">Resume</span>
+					<img src="images/ux-resume.png" class="center" />
+				</div>
 
-	 </div><!--End container div-->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="js/smoothscroll.js"></script>
-</body>
-</html>
+				<div class="contentbox" id="contact">
+					<span class="head">Contact</span>
+					<p>Feel free to contact me via e-mail at acmartine[at]gmail.com. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign">@arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
+				</div>
+			</div><!--End right div-->
+
+		</div><!--End container div-->
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/smoothscroll.js"></script>
+		<script type="text/javascript" src="js/lightbox.js"></script>
+	</body>
+	</html>
