--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
 					<p>Cheese Sammies: UX/UI Design, Front-End Development, Creative Direction</p>
 				</div>
 				<div class="hover11">
+					<div id="gallery">
 					<figure>
 						<a href="images/bm-01.png" data-lightbox="beermenus" data-title="Customizable Tap Takeover Design"><img src="images/bm-01-th.png" /></a>
 						<a href="images/bm-02.png" data-lightbox="beermenus" data-title="Table Tent Design"><img src="images/bm-02-th.png" /></a>
 						<a href="images/bm-03.png" data-lightbox="beermenus" data-title="Table Tent Design"><img src="images/bm-03-th.png" /></a>
 						<a href="images/bm-04.png" data-lightbox="beermenus" data-title="Table Tent Design"><img src="images/bm-04-th.png" /></a>
 					</figure>
-					<p>BeerMenus: POS Material Design</p>
 				</div>
+					<p>BeerMenus: POS Material Design</p>
+			</div>
 
 				<!--Resume-->
 				<div class="contentbox" id="resume">
