font-face updates

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 	<link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 	<link href="css/lightbox.css" rel="stylesheet">
-	<link rel="shortcut icon" href="bar.ico" type="image/x-icon">
-	<link rel="icon" href="bar.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
